handeling color background and foreground with native xcolor alias "\colorlet{}{}" instead of pgf macro

--- a/doc/examples/station_chamstadt.tex
+++ b/doc/examples/station_chamstadt.tex
@@ -9,7 +9,7 @@
 \begin{document}
   \begin{tikzpicture}[font=\sffamily]
   { % station names
-    \tikzset{every node/.style={\foreground!50!\background}};
+    \tikzset{every node/.style={foreground!50!background}};
     \node[right,align=left] at ( 5,1.3) {to and from\\ Berg};
     \node                   at (21,3.9) {{\LARGE Bf Chamstadt}};
     \node[left,align=right] at (37.5,1.3) {to and from\\ Dornroda};
