--- a/doc/versionhistory.tex
+++ b/doc/versionhistory.tex
@@ -39,4 +39,7 @@
   \vhEntry{0.7.0}{2022-04-02}{MS|GW}{
     revised symbol and syntax for balises; replaced "\textbackslash gettikzxy" with "\textbackslash path let" syntax; fixed PackageWarning Error in development mode; fixed foreground of sidetrack (alias)
   }
+  \vhEntry{0.7.1}{2022-06-02}{MS}{
+    handeling color background and foreground with native xcolor alias "\textbackslash colorlet{}{}" instead of pgf macro
+  }
 \end{versionhistory}
