--- a/doc/examples/station_berg.tex
+++ b/doc/examples/station_berg.tex
@@ -9,7 +9,7 @@
 \begin{document}
   \begin{tikzpicture}[font=\sffamily]
   { % station names
-    \tikzset{every node/.style={\foreground!50!\background}};
+    \tikzset{every node/.style={foreground!50!background}};
     \node[right,align=left] at ( 2,1.3) {to and from\\ Arnau};
     \node                   at (21,3.3) {{\LARGE Bf Berg}};
     \node[left,align=right] at (38,1.3) {to and from\\ Chamstadt};
