--- a/src/tikzlibrarytrackschematic.code.tex
+++ b/src/tikzlibrarytrackschematic.code.tex
@@ -7,6 +7,9 @@
 \ProvidesFileRCS{tikzlibrarytrackschematic.code.tex}%
 %
 \RequirePackage{tikz,etoolbox}%
+% colors
+\colorlet{background}{white}
+\colorlet{foreground}{black}
 %
 %%%%%%%%%%%%%%%
 % loading sublibraries
