--- a/test/a0_landscape_adjustbox.tex
+++ b/test/a0_landscape_adjustbox.tex
@@ -16,7 +16,7 @@
   \begin{adjustbox}{width=\textwidth}
     \begin{tikzpicture}
       { % station names
-        \tikzset{every node/.style={\foreground!50!\background}};
+        \tikzset{every node/.style={foreground!50!background}};
         \node[right,align=left] at ( 2,1.3) {to and from\\ Arnau};
         \node                   at (21,3.3) {{\LARGE Bf Berg}};
         \node[left,align=right] at (38,1.3) {to and from\\ Chamstadt};
